appId: com.cyjoon.dailyfundingmobile
---
- launchApp:
    clearState: true
- runFlow:
    when:
      visible:
        text: Fetch development servers
    commands:
      - openLink: "dailyfunding://expo-development-client/?url=http%3A%2F%2F10.0.2.2%3A8081"
- runFlow:
    when:
      visible:
        text: Continue
    commands:
      - tapOn:
          text: Continue
- runFlow:
    when:
      visible:
        text: Open DevTools|Toggle performance monitor
    commands:
      - back
- assertVisible:
    text: 데일리펀딩
- extendedWaitUntil:
    visible:
      text: 로그인|마이
    timeout: 30000
- runFlow:
    when:
      visible:
        text: 로그인
    file: subflows/webview-signin-android.yaml
- extendedWaitUntil:
    visible:
      text: 간편비밀번호|마이
    timeout: 30000
- runFlow:
    file: subflows/pin-unlock-android.yaml
- extendedWaitUntil:
    visible:
      text: 마이
    timeout: 30000
- stopApp
- launchApp
- extendedWaitUntil:
    visible:
      text: 간편비밀번호|마이
    timeout: 30000
- runFlow:
    file: subflows/pin-unlock-android.yaml
- extendedWaitUntil:
    visible:
      text: 마이
    timeout: 30000
- assertNotVisible:
    text: 투자부터 상환까지, 매일 쌓이는 수익
