appId: com.cyjoon.dailyfunding-mobile
---
- runFlow:
    when:
      visible:
        text: 간편비밀번호를 등록해 주세요
    commands:
      - tapOn:
          text: "1"
      - tapOn:
          text: "2"
      - tapOn:
          text: "3"
      - tapOn:
          text: "4"
      - tapOn:
          text: "5"
      - tapOn:
          text: "6"
      - extendedWaitUntil:
          visible:
            text: 한 번 더 입력해 주세요
          timeout: 15000
      - tapOn:
          text: "1"
      - tapOn:
          text: "2"
      - tapOn:
          text: "3"
      - tapOn:
          text: "4"
      - tapOn:
          text: "5"
      - tapOn:
          text: "6"
- runFlow:
    when:
      visible:
        text: 간편비밀번호 입력
    commands:
      - tapOn:
          text: "1"
      - tapOn:
          text: "2"
      - tapOn:
          text: "3"
      - tapOn:
          text: "4"
      - tapOn:
          text: "5"
      - tapOn:
          text: "6"
- runFlow:
    when:
      visible:
        text: 나중에
    commands:
      - tapOn:
          text: 나중에
