appId: com.cyjoon.dailyfunding-mobile
---
- launchApp:
    clearState: true
    clearKeychain: true
- runFlow:
    when:
      visible:
        text: Enter URL manually
    file: subflows/dev-server-load.yaml
- runFlow:
    when:
      visible:
        text: Toggle performance monitor
    commands:
      - tapOn:
          point: 90%,61%
- extendedWaitUntil:
    visible:
      text: 간편비밀번호|마이|로그인
    timeout: 30000
- runFlow:
    when:
      visible:
        text: 로그인
    file: subflows/webview-signin.yaml
- runFlow:
    file: subflows/pin-unlock.yaml
- extendedWaitUntil:
    visible:
      text: 마이
    timeout: 30000
- tapOn:
    text: 마이
- extendedWaitUntil:
    visible:
      text: 마이페이지
    timeout: 30000
- tapOn:
    text: 출금하기
- extendedWaitUntil:
    visible:
      text: 전액 출금
    timeout: 30000
- assertNotVisible:
    text: 간편비밀번호 입력
- tapOn:
    text: 전액 출금
- tapOn:
    text: 출금하기
    index: 1
- extendedWaitUntil:
    visible:
      text: 간편비밀번호 입력
    timeout: 30000
- assertVisible:
    text: 간편비밀번호 입력
