appId: com.cyjoon.dailyfunding-mobile
---
- launchApp
- extendedWaitUntil:
    visible:
      text: 간편비밀번호|마이
    timeout: 30000
- runFlow:
    file: subflows/pin-unlock.yaml
- extendedWaitUntil:
    visible:
      text: 마이
    timeout: 30000
- tapOn:
    text: 마이
- extendedWaitUntil:
    visible:
      text: 마이페이지
    timeout: 30000
- assertNotVisible:
    text: 간편비밀번호
